fix: Apply Nagle's Algorithm setting per network interface
Write TcpAckFrequency and TCPNoDelay to each interface subkey under Tcpip\Parameters\Interfaces instead of the global Parameters path. Toggle ON now deletes values (restoring Windows defaults), toggle OFF sets them to 1 (disabling Nagle's). Fixed Technical Details not showing current values for per-interface settings. Updated setting name and description across all 25 localization files.

--- a/src/Winhance.UI/Features/Common/Localization/af.json
+++ b/src/Winhance.UI/Features/Common/Localization/af.json
@@ -612,8 +612,8 @@
   "Setting_gaming-performance-desktop-composition_Description": "Aktiveer visuele effekte bestuur deur die Desktop Window Manager. Deaktivering mag geringe verrigtingswinste op ouer hardeware bied maar sal Aero-effekte breek",
   "Setting_gaming-network-throttling_Name": "Netwerkbeperking",
   "Setting_gaming-network-throttling_Description": "Beheer netwerkpakket-tempobeperkings vir multimediatoepassings. Dit word aanbeveel om beperking geaktiveer te hou (verstek: 10 pakkette/ms) aangesien dit beter DPC-latensie vir speletjies bied as om dit heeltemal te deaktiveer",
-  "Setting_gaming-nagle-algorithm_Name": "Aktiveer Nagle se Algoritme",
-  "Setting_gaming-nagle-algorithm_Description": "Bondel klein netwerkpakkies saam voordat dit gestuur word om doeltreffendheid te verbeter. Deaktivering verminder vertraging vir intydse aanlyn spel maar mag bandwydtegebruik effens verhoog",
+  "Setting_gaming-nagle-algorithm_Name": "Nagle-algoritme",
+  "Setting_gaming-nagle-algorithm_Description": "Buffer klein netwerkpakkette voor versending om oorhoofse koste te verminder. Skakel af vir laer latensie in aanlyn-speletjies, of hou aan vir algemene netwerkdoeltreffendheid",
   "Setting_gaming-xbox-game-dvr_Name": "Xbox GameDVR",
   "Setting_gaming-xbox-game-dvr_Description": "Neem spelknipsels op en neem skermskote met die Xbox Game Bar oorleg. Deaktivering verminder SVE/GPU gebruik en kan raamtempo's verbeter",
   "Setting_gaming-game-bar-controller_Name": "Game Bar Beheerder Toegang",
