--- a/src/Winhance.UI/Features/Common/Localization/en.json
+++ b/src/Winhance.UI/Features/Common/Localization/en.json
@@ -647,8 +647,8 @@
   "Setting_gaming-performance-desktop-composition_Description": "Enable visual effects managed by the Desktop Window Manager. Disabling may provide minor performance gains on older hardware but will break Aero effects",
   "Setting_gaming-network-throttling_Name": "Network Throttling",
   "Setting_gaming-network-throttling_Description": "Controls network packet rate limiting for multimedia applications. Keeping throttling enabled (default: 10 packets/ms) is recommended as it provides better DPC latency for gaming than disabling it entirely",
-  "Setting_gaming-nagle-algorithm_Name": "Enable Nagle\u0027s Algorithm",
-  "Setting_gaming-nagle-algorithm_Description": "Batch small network packets together before sending to improve efficiency. Disabling reduces latency for real-time online gaming but may slightly increase bandwidth usage",
+  "Setting_gaming-nagle-algorithm_Name": "Nagle\u0027s Algorithm",
+  "Setting_gaming-nagle-algorithm_Description": "Buffers small network packets before sending to reduce overhead. Turn off to lower latency in online games, or keep on for general-purpose network efficiency",
   "Setting_gaming-xbox-game-dvr_Name": "Xbox Game DVR",
   "Setting_gaming-xbox-game-dvr_Description": "Record gameplay clips and take screenshots using the Xbox Game Bar overlay. Disabling reduces CPU/GPU usage and can improve frame rates",
   "Setting_gaming-game-bar-controller_Name": "Game Bar Controller Access",
