--- a/src/Winhance.UI/Features/Common/Localization/es.json
+++ b/src/Winhance.UI/Features/Common/Localization/es.json
@@ -612,8 +612,8 @@
   "Setting_gaming-performance-desktop-composition_Description": "Habilita los efectos visuales gestionados por el Administrador de ventanas de escritorio. Deshabilitar puede proporcionar mejoras de rendimiento menores en hardware antiguo, pero romperá los efectos Aero",
   "Setting_gaming-network-throttling_Name": "Limitación de red",
   "Setting_gaming-network-throttling_Description": "Controla la limitación de velocidad de paquetes de red para aplicaciones multimedia. Se recomienda mantener la limitación activada (predeterminado: 10 paquetes/ms) ya que proporciona mejor latencia DPC para juegos que desactivarla por completo",
-  "Setting_gaming-nagle-algorithm_Name": "Habilitar Algoritmo de Nagle",
-  "Setting_gaming-nagle-algorithm_Description": "Agrupa pequeños paquetes de red antes de enviarlos para mejorar la eficiencia. Deshabilitarlo reduce la latencia para juegos en línea en tiempo real, pero puede aumentar ligeramente el uso de ancho de banda",
+  "Setting_gaming-nagle-algorithm_Name": "Algoritmo de Nagle",
+  "Setting_gaming-nagle-algorithm_Description": "Almacena peque\u00f1os paquetes de red antes de enviarlos para reducir la sobrecarga. Desact\u00edvelo para menor latencia en juegos en l\u00ednea, o d\u00e9jelo activado para eficiencia de red general",
   "Setting_gaming-xbox-game-dvr_Name": "DVR de Juegos de Xbox",
   "Setting_gaming-xbox-game-dvr_Description": "Graba clips de juego y toma capturas de pantalla usando la superposición de Xbox Game Bar. Deshabilitar reduce el uso de CPU/GPU y puede mejorar las tasas de fotogramas",
   "Setting_gaming-game-bar-controller_Name": "Acceso al Controlador de Game Bar",
