--- a/src/Winhance.UI/Features/Common/Localization/fr.json
+++ b/src/Winhance.UI/Features/Common/Localization/fr.json
@@ -612,8 +612,8 @@
   "Setting_gaming-performance-desktop-composition_Description": "Activez les effets visuels gérés par le gestionnaire de fenêtres du bureau. La désactivation peut fournir de légers gains de performances sur du matériel plus ancien mais interrompra les effets Aero",
   "Setting_gaming-network-throttling_Name": "Limitation réseau",
   "Setting_gaming-network-throttling_Description": "Contrôle la limitation du débit des paquets réseau pour les applications multimédias. Il est recommandé de garder la limitation activée (par défaut : 10 paquets/ms) car elle offre une meilleure latence DPC pour les jeux que sa désactivation complète",
-  "Setting_gaming-nagle-algorithm_Name": "Activer l'algorithme de Nagle",
-  "Setting_gaming-nagle-algorithm_Description": "Regroupez les petits paquets réseau avant de les envoyer pour améliorer l'efficacité. La désactivation réduit la latence pour les jeux en ligne en temps réel mais peut légèrement augmenter l'utilisation de la bande passante",
+  "Setting_gaming-nagle-algorithm_Name": "Algorithme de Nagle",
+  "Setting_gaming-nagle-algorithm_Description": "Met en m\u00e9moire tampon les petits paquets r\u00e9seau avant l\u0027envoi pour r\u00e9duire la surcharge. D\u00e9sactivez pour r\u00e9duire la latence dans les jeux en ligne, ou gardez activ\u00e9 pour l\u0027efficacit\u00e9 r\u00e9seau g\u00e9n\u00e9rale",
   "Setting_gaming-xbox-game-dvr_Name": "Xbox Game DVR",
   "Setting_gaming-xbox-game-dvr_Description": "Enregistrez des clips de jeu et prenez des captures d'écran à l'aide de la superposition de la barre de jeu Xbox. La désactivation réduit l'utilisation du processeur/GPU et peut améliorer les fréquences d'images",
   "Setting_gaming-game-bar-controller_Name": "Accès au contrôleur de la barre de jeu",
