--- a/src/Winhance.UI/Features/Common/Localization/hi.json
+++ b/src/Winhance.UI/Features/Common/Localization/hi.json
@@ -612,8 +612,8 @@
   "Setting_gaming-performance-desktop-composition_Description": "डेस्कटॉप विंडो मैनेजर द्वारा प्रबंधित दृश्य प्रभाव सक्षम करें। अक्षम करने से पुराने हार्डवेयर पर मामूली प्रदर्शन लाभ मिल सकता है लेकिन एयरो प्रभाव टूट जाएगा",
   "Setting_gaming-network-throttling_Name": "नेटवर्क थ्रॉटलिंग",
   "Setting_gaming-network-throttling_Description": "मल्टीमीडिया अनुप्रयोगों के लिए नेटवर्क पैकेट दर सीमित करने को नियंत्रित करता है। थ्रॉटलिंग को सक्षम रखना (डिफ़ॉल्ट: 10 पैकेट/ms) अनुशंसित है क्योंकि यह गेमिंग के लिए इसे पूरी तरह अक्षम करने की तुलना में बेहतर DPC विलंबता प्रदान करता है",
-  "Setting_gaming-nagle-algorithm_Name": "नागल का एल्गोरिदम सक्षम करें",
-  "Setting_gaming-nagle-algorithm_Description": "दक्षता में सुधार के लिए भेजने से पहले छोटे नेटवर्क पैकेट को एक साथ बैच करें। अक्षम करने से रीयल-टाइम ऑनलाइन गेमिंग के लिए विलंबता कम हो जाती है लेकिन बैंडविड्थ उपयोग थोड़ा बढ़ सकता है",
+  "Setting_gaming-nagle-algorithm_Name": "Nagle \u0915\u093e \u090f\u0932\u094d\u0917\u094b\u0930\u093f\u0926\u092e",
+  "Setting_gaming-nagle-algorithm_Description": "\u0913\u0935\u0930\u0939\u0947\u0921 \u0915\u092e \u0915\u0930\u0928\u0947 \u0915\u0947 \u0932\u093f\u090f \u092d\u0947\u091c\u0928\u0947 \u0938\u0947 \u092a\u0939\u0932\u0947 \u091b\u094b\u091f\u0947 \u0928\u0947\u091f\u0935\u0930\u094d\u0915 \u092a\u0948\u0915\u0947\u091f \u092c\u092b\u093c\u0930 \u0915\u0930\u0924\u093e \u0939\u0948\u0964 \u0911\u0928\u0932\u093e\u0907\u0928 \u0917\u0947\u092e\u094d\u0938 \u092e\u0947\u0902 \u0915\u092e \u0932\u0947\u091f\u0947\u0902\u0938\u0940 \u0915\u0947 \u0932\u093f\u090f \u092c\u0902\u0926 \u0915\u0930\u0947\u0902, \u092f\u093e \u0938\u093e\u092e\u093e\u0928\u094d\u092f \u0928\u0947\u091f\u0935\u0930\u094d\u0915 \u0926\u0915\u094d\u0937\u0924\u093e \u0915\u0947 \u0932\u093f\u090f \u091a\u093e\u0932\u0942 \u0930\u0916\u0947\u0902",
   "Setting_gaming-xbox-game-dvr_Name": "Xbox गेम DVR",
   "Setting_gaming-xbox-game-dvr_Description": "गेमप्ले क्लिप रिकॉर्ड करें और Xbox गेम बार ओवरले का उपयोग करके स्क्रीनशॉट लें। अक्षम करने से CPU/GPU उपयोग कम हो जाता है और फ्रेम दर में सुधार हो सकता है",
   "Setting_gaming-game-bar-controller_Name": "गेम बार नियंत्रक पहुँच",
