--- a/src/Winhance.UI/Features/Common/Localization/hu.json
+++ b/src/Winhance.UI/Features/Common/Localization/hu.json
@@ -612,8 +612,8 @@
   "Setting_gaming-performance-desktop-composition_Description": "Engedélyezze az Asztali ablakkezelő által kezelt vizuális effektusokat. A letiltás kisebb teljesítménynövekedést eredményezhet régebbi hardvereken, de az Aero effektusok nem működnek.",
   "Setting_gaming-network-throttling_Name": "Hálózati korlátozás",
   "Setting_gaming-network-throttling_Description": "Szabályozza a hálózati csomagok sebességkorlátozását multimédiás alkalmazásokhoz. Ajánlott a korlátozást bekapcsolva hagyni (alapértelmezett: 10 csomag/ms), mivel jobb DPC-késleltetést biztosít játékokhoz, mint a teljes kikapcsolás",
-  "Setting_gaming-nagle-algorithm_Name": "Engedélyezze a Nagle algoritmust",
-  "Setting_gaming-nagle-algorithm_Description": "Csoportosítsa a kis hálózati csomagokat küldés előtt a hatékonyság növelése érdekében. A letiltása csökkenti a késleltetést a valós idejű online játékoknál, de kismértékben növelheti a sávszélesség-használatot",
+  "Setting_gaming-nagle-algorithm_Name": "Nagle-algoritmus",
+  "Setting_gaming-nagle-algorithm_Description": "Puffereli a kis h\u00e1l\u00f3zati csomagokat k\u00fcld\u00e9s el\u0151tt a t\u00f6bbletterhel\u00e9s cs\u00f6kkent\u00e9se \u00e9rdek\u00e9ben. Kapcsolja ki az alacsonyabb k\u00e9sleltet\u00e9s\u00e9rt online j\u00e1t\u00e9kokban, vagy hagyja bekapcsolva az \u00e1ltal\u00e1nos h\u00e1l\u00f3zati hat\u00e9konys\u00e1g\u00e9rt",
   "Setting_gaming-xbox-game-dvr_Name": "Xbox játékfelvétel",
   "Setting_gaming-xbox-game-dvr_Description": "Rögzítsen játékmeneteket és készítsen képernyőképeket az Xbox játéksáv átfedés segédprogrammal. A funkció kikapcsolásával csökkenthető a CPU/GPU használata és javulhat a képfrissítési sebesség.",
   "Setting_gaming-game-bar-controller_Name": "Játéksáv vezérlő hozzáférés",
