--- a/src/Winhance.UI/Features/Common/Localization/lt.json
+++ b/src/Winhance.UI/Features/Common/Localization/lt.json
@@ -612,8 +612,8 @@
   "Setting_gaming-performance-desktop-composition_Description": "Įjungti vaizdinius efektus, valdomus darbalaukio langų tvarkytuvės. Išjungimas gali suteikti nedidelį našumo padidėjimą senesnėje aparatinėje įrangoje, bet sugadins Aero efektus",
   "Setting_gaming-network-throttling_Name": "Tinklo ribojimas",
   "Setting_gaming-network-throttling_Description": "Valdo tinklo paketų greičio ribojimą multimedijos programoms. Rekomenduojama palikti ribojimą įjungtą (numatytasis: 10 paketų/ms), nes tai užtikrina geresnę DPC delsą žaidimams nei visiškas išjungimas",
-  "Setting_gaming-nagle-algorithm_Name": "Įjungti Nagle algoritmą",
-  "Setting_gaming-nagle-algorithm_Description": "Grupuoti mažus tinklo paketus prieš siunčiant, kad pagerėtų efektyvumas. Išjungimas sumažina delsą realaus laiko internetiniams žaidimams, bet gali šiek tiek padidinti pralaidumo naudojimą",
+  "Setting_gaming-nagle-algorithm_Name": "Nagle algoritmas",
+  "Setting_gaming-nagle-algorithm_Description": "Buferizuoja mažus tinklo paketus prieš siuntimą, kad sumažintų apkrovą. Išjunkite mažesnei delsei internetiniuose žaidimuose arba palikite įjungtą bendram tinklo efektyvumui",
   "Setting_gaming-xbox-game-dvr_Name": "Xbox žaidimų DVR",
   "Setting_gaming-xbox-game-dvr_Description": "Įrašyti žaidimo klipus ir daryti ekrano nuotraukas naudojant Xbox žaidimų juostos perdangą. Išjungimas sumažina CPU/GPU naudojimą ir gali pagerinti kadrų dažnį",
   "Setting_gaming-game-bar-controller_Name": "Žaidimų juostos valdiklio prieiga",
