--- a/src/Winhance.UI/Features/Common/Localization/lv.json
+++ b/src/Winhance.UI/Features/Common/Localization/lv.json
@@ -612,8 +612,8 @@
   "Setting_gaming-performance-desktop-composition_Description": "Iespējot vizuālos efektus, ko pārvalda darbvirsmas logu pārvaldnieks. Atspējošana var nodrošināt nelielus veiktspējas ieguvumus vecākai aparatūrai, bet sabojās Aero efektus",
   "Setting_gaming-network-throttling_Name": "Tīkla ierobežošana",
   "Setting_gaming-network-throttling_Description": "Kontrolē tīkla pakešu ātruma ierobežošanu multivides lietojumprogrammām. Ieteicams saglabāt ierobežošanu ieslēgtu (noklusējums: 10 paketes/ms), jo tā nodrošina labāku DPC latentumu spēlēm nekā pilnīga atspējošana",
-  "Setting_gaming-nagle-algorithm_Name": "Iespējot Nagle algoritmu",
-  "Setting_gaming-nagle-algorithm_Description": "Apvienot mazas tīkla paketes kopā pirms nosūtīšanas, lai uzlabotu efektivitāti. Atspējošana samazina latentumu reāllaika tiešsaistes spēlēm, bet var nedaudz palielināt joslas platuma izmantošanu",
+  "Setting_gaming-nagle-algorithm_Name": "Nagle algoritms",
+  "Setting_gaming-nagle-algorithm_Description": "Bufer\u0113 mazas t\u012bkla paketes pirms nos\u016bt\u012b\u0161anas, lai samazin\u0101tu pieskait\u0101m\u0101s izmaksas. Izsl\u0113dziet, lai samazin\u0101tu aizkavi tie\u0161saistes sp\u0113l\u0113s, vai atst\u0101jiet iesl\u0113gtu visp\u0101r\u0113jai t\u012bkla efektivit\u0101tei",
   "Setting_gaming-xbox-game-dvr_Name": "Xbox GameDVR",
   "Setting_gaming-xbox-game-dvr_Description": "Ierakstīt spēles klipus un uzņemt ekrānuzņēmumus, izmantojot Xbox spēļu joslas pārklājumu. Atspējošana samazina CPU/GPU lietojumu un var uzlabot kadru nomaiņas ātrumu",
   "Setting_gaming-game-bar-controller_Name": "Spēļu joslas kontroliera piekļuve",
