--- a/src/Winhance.UI/Features/Common/Localization/pl.json
+++ b/src/Winhance.UI/Features/Common/Localization/pl.json
@@ -612,8 +612,8 @@
   "Setting_gaming-performance-desktop-composition_Description": "Włącz efekty wizualne zarządzane przez Menedżera okien pulpitu. Wyłączenie może zapewnić niewielkie zyski wydajności na starszym sprzęcie, ale spowoduje uszkodzenie efektów Aero",
   "Setting_gaming-network-throttling_Name": "Ograniczanie sieci",
   "Setting_gaming-network-throttling_Description": "Kontroluje ograniczanie szybkości pakietów sieciowych dla aplikacji multimedialnych. Zaleca się pozostawienie ograniczania włączonego (domyślnie: 10 pakietów/ms), ponieważ zapewnia lepsze opóźnienie DPC dla gier niż całkowite wyłączenie",
-  "Setting_gaming-nagle-algorithm_Name": "Włącz algorytm Nagle'a",
-  "Setting_gaming-nagle-algorithm_Description": "Grupuj małe pakiety sieciowe przed wysłaniem, aby poprawić wydajność. Wyłączenie zmniejsza opóźnienia w grach online w czasie rzeczywistym, ale może nieznacznie zwiększyć zużycie przepustowości",
+  "Setting_gaming-nagle-algorithm_Name": "Algorytm Nagle\u0027a",
+  "Setting_gaming-nagle-algorithm_Description": "Buforuje ma\u0142e pakiety sieciowe przed wys\u0142aniem, aby zmniejszy\u0107 narzut. Wy\u0142\u0105cz, aby zmniejszy\u0107 op\u00f3\u017anienie w grach online, lub pozostaw w\u0142\u0105czony dla og\u00f3lnej wydajno\u015bci sieci",
   "Setting_gaming-xbox-game-dvr_Name": "Xbox Game DVR",
   "Setting_gaming-xbox-game-dvr_Description": "Nagrywaj klipy z rozgrywki i rób zrzuty ekranu za pomocą paska gier Xbox. Wyłączenie zmniejsza zużycie procesora/GPU i może poprawić liczbę klatek na sekundę",
   "Setting_gaming-game-bar-controller_Name": "Dostęp kontrolera do paska gier",
