--- a/src/Winhance.UI/Features/Common/Localization/pt-BR.json
+++ b/src/Winhance.UI/Features/Common/Localization/pt-BR.json
@@ -612,8 +612,8 @@
   "Setting_gaming-performance-desktop-composition_Description": "Ativar efeitos visuais gerenciados pelo Gerenciador de Janelas da Área de Trabalho. Desativar pode fornecer ganhos de desempenho menores em hardware mais antigo, mas quebrará os efeitos Aero",
   "Setting_gaming-network-throttling_Name": "Limitação de rede",
   "Setting_gaming-network-throttling_Description": "Controla a limitação da taxa de pacotes de rede para aplicativos multimídia. É recomendado manter a limitação ativada (padrão: 10 pacotes/ms) pois oferece melhor latência DPC para jogos do que desativá-la completamente",
-  "Setting_gaming-nagle-algorithm_Name": "Ativar Algoritmo de Nagle",
-  "Setting_gaming-nagle-algorithm_Description": "Agrupar pequenos pacotes de rede antes de enviar para melhorar a eficiência. Desativar reduz a latência para jogos online em tempo real, mas pode aumentar ligeiramente o uso da largura de banda",
+  "Setting_gaming-nagle-algorithm_Name": "Algoritmo de Nagle",
+  "Setting_gaming-nagle-algorithm_Description": "Armazena pequenos pacotes de rede antes de enviar para reduzir a sobrecarga. Desative para menor lat\u00eancia em jogos online, ou mantenha ativado para efici\u00eancia de rede geral",
   "Setting_gaming-xbox-game-dvr_Name": "Xbox Game DVR",
   "Setting_gaming-xbox-game-dvr_Description": "Grave clipes de jogabilidade e tire capturas de tela usando a sobreposição da Barra de Jogo do Xbox. Desativar reduz o uso de CPU/GPU e pode melhorar as taxas de quadros",
   "Setting_gaming-game-bar-controller_Name": "Acesso ao Controle da Barra de Jogo",
