--- a/src/Winhance.UI/Features/Common/Localization/pt.json
+++ b/src/Winhance.UI/Features/Common/Localization/pt.json
@@ -612,8 +612,8 @@
   "Setting_gaming-performance-desktop-composition_Description": "Ativar efeitos visuais geridos pelo Gestor de Janelas do Ambiente de Trabalho. Desativar pode proporcionar pequenos ganhos de desempenho em hardware mais antigo, mas irá quebrar os efeitos Aero",
   "Setting_gaming-network-throttling_Name": "Limitação de rede",
   "Setting_gaming-network-throttling_Description": "Controla a limitação da taxa de pacotes de rede para aplicações multimédia. Recomenda-se manter a limitação ativada (predefinição: 10 pacotes/ms) pois proporciona melhor latência DPC para jogos do que a desativação completa",
-  "Setting_gaming-nagle-algorithm_Name": "Ativar Algoritmo de Nagle",
-  "Setting_gaming-nagle-algorithm_Description": "Agrupar pequenos pacotes de rede antes de enviar para melhorar a eficiência. Desativar reduz a latência para jogos online em tempo real, mas pode aumentar ligeiramente o uso de largura de banda",
+  "Setting_gaming-nagle-algorithm_Name": "Algoritmo de Nagle",
+  "Setting_gaming-nagle-algorithm_Description": "Armazena pequenos pacotes de rede antes de enviar para reduzir a sobrecarga. Desative para menor lat\u00eancia em jogos online, ou mantenha ativado para efici\u00eancia de rede geral",
   "Setting_gaming-xbox-game-dvr_Name": "Xbox Game DVR",
   "Setting_gaming-xbox-game-dvr_Description": "Gravar clipes de jogo e tirar capturas de ecrã usando a sobreposição da Barra de Jogo Xbox. Desativar reduz o uso de CPU/GPU e pode melhorar as taxas de fotogramas",
   "Setting_gaming-game-bar-controller_Name": "Acesso do Comando à Barra de Jogo",
