--- a/src/Winhance.UI/Features/Common/Localization/sv.json
+++ b/src/Winhance.UI/Features/Common/Localization/sv.json
@@ -612,8 +612,8 @@
   "Setting_gaming-performance-desktop-composition_Description": "Aktivera visuella effekter som hanteras av Skrivbordsfönsterhanteraren. Inaktivering kan ge mindre prestandavinster på äldre hårdvara men kommer att bryta Aero-effekter",
   "Setting_gaming-network-throttling_Name": "Nätverksbegränsning",
   "Setting_gaming-network-throttling_Description": "Styr hastighetsbegränsning av nätverkspaket för multimediaapplikationer. Det rekommenderas att behålla begränsningen aktiverad (standard: 10 paket/ms) eftersom det ger bättre DPC-latens för spel än att inaktivera det helt",
-  "Setting_gaming-nagle-algorithm_Name": "Aktivera Nagles algoritm",
-  "Setting_gaming-nagle-algorithm_Description": "Samla små nätverkspaket innan de skickas för att förbättra effektiviteten. Inaktivering minskar latensen för realtids onlinespel men kan något öka bandbreddsanvändningen",
+  "Setting_gaming-nagle-algorithm_Name": "Nagle-algoritmen",
+  "Setting_gaming-nagle-algorithm_Description": "Buffrar sm\u00e5 n\u00e4tverkspaket innan s\u00e4ndning f\u00f6r att minska overhead. St\u00e4ng av f\u00f6r l\u00e4gre latens i onlinespel, eller l\u00e5t vara p\u00e5 f\u00f6r allm\u00e4n n\u00e4tverkseffektivitet",
   "Setting_gaming-xbox-game-dvr_Name": "Xbox Game DVR",
   "Setting_gaming-xbox-game-dvr_Description": "Spela in spelklipp och ta skärmdumpar med Xbox Game Bar-överlägget. Inaktivering minskar CPU/GPU-användning och kan förbättra bildfrekvenser",
   "Setting_gaming-game-bar-controller_Name": "Åtkomst till spelrad med handkontroll",
