--- a/src/Winhance.UI/Features/Common/Localization/zh-Hans.json
+++ b/src/Winhance.UI/Features/Common/Localization/zh-Hans.json
@@ -612,8 +612,8 @@
   "Setting_gaming-performance-desktop-composition_Description": "启用由桌面窗口管理器管理的视觉效果。禁用可能会在较旧的硬件上提供轻微的性能提升，但会破坏 Aero 效果",
   "Setting_gaming-network-throttling_Name": "网络限流",
   "Setting_gaming-network-throttling_Description": "控制多媒体应用程序的网络数据包速率限制。建议保持限流启用状态（默认：10 数据包/毫秒），因为这比完全禁用能为游戏提供更好的 DPC 延迟",
-  "Setting_gaming-nagle-algorithm_Name": "启用 Nagle 算法",
-  "Setting_gaming-nagle-algorithm_Description": "在发送之前将小网络数据包批量处理以提高效率。禁用可减少实时在线游戏的延迟，但可能会略微增加带宽使用量",
+  "Setting_gaming-nagle-algorithm_Name": "Nagle \u7b97\u6cd5",
+  "Setting_gaming-nagle-algorithm_Description": "\u5728\u53d1\u9001\u524d\u7f13\u51b2\u5c0f\u578b\u7f51\u7edc\u6570\u636e\u5305\u4ee5\u51cf\u5c11\u5f00\u9500\u3002\u5173\u95ed\u53ef\u964d\u4f4e\u5728\u7ebf\u6e38\u620f\u7684\u5ef6\u8fdf\uff0c\u6216\u4fdd\u6301\u5f00\u542f\u4ee5\u7ef4\u6301\u4e00\u822c\u7f51\u7edc\u6548\u7387",
   "Setting_gaming-xbox-game-dvr_Name": "Xbox Game DVR",
   "Setting_gaming-xbox-game-dvr_Description": "使用 Xbox Game Bar 覆盖录制游戏片段并截取屏幕截图。禁用可减少 CPU/GPU 使用量并可以提高帧率",
   "Setting_gaming-game-bar-controller_Name": "游戏栏控制器访问",
