--- a/src/Winhance.UI/Features/Common/Localization/zh-Hant.json
+++ b/src/Winhance.UI/Features/Common/Localization/zh-Hant.json
@@ -612,8 +612,8 @@
   "Setting_gaming-performance-desktop-composition_Description": "啟用由桌面視窗管理員 (DWM) 管理的視覺效果。在舊硬體上停用可能會提供些微效能提升，但會破壞 Aero 效果",
   "Setting_gaming-network-throttling_Name": "網路限流",
   "Setting_gaming-network-throttling_Description": "控制多媒體應用程式的網路封包速率限制。建議保持限流啟用狀態（預設：10 封包/毫秒），因為這比完全停用能為遊戲提供更好的 DPC 延遲",
-  "Setting_gaming-nagle-algorithm_Name": "啟用 Nagle 演算法",
-  "Setting_gaming-nagle-algorithm_Description": "在傳送前將小型網路封包批次處理以提高效率。停用可降低即時線上遊戲的延遲，但可能會稍微增加頻寬使用量",
+  "Setting_gaming-nagle-algorithm_Name": "Nagle \u6f14\u7b97\u6cd5",
+  "Setting_gaming-nagle-algorithm_Description": "\u5728\u50b3\u9001\u524d\u7de9\u885d\u5c0f\u578b\u7db2\u8def\u5c01\u5305\u4ee5\u6e1b\u5c11\u958b\u92b7\u3002\u95dc\u9589\u53ef\u964d\u4f4e\u7dda\u4e0a\u904a\u6232\u7684\u5ef6\u9072\uff0c\u6216\u4fdd\u6301\u958b\u555f\u4ee5\u7dad\u6301\u4e00\u822c\u7db2\u8def\u6548\u7387",
   "Setting_gaming-xbox-game-dvr_Name": "Xbox Game DVR",
   "Setting_gaming-xbox-game-dvr_Description": "使用 Xbox Game Bar 覆疊錄製遊戲片段並擷取螢幕截圖。停用可降低 CPU/GPU 使用率並改善畫面更新率",
   "Setting_gaming-game-bar-controller_Name": "Game Bar 控制器存取",
