--- a/src/Winhance.UI/Features/Common/Localization/ar.json
+++ b/src/Winhance.UI/Features/Common/Localization/ar.json
@@ -598,8 +598,8 @@
     "Setting_gaming-performance-desktop-composition_Description": "تمكين التأثيرات المرئية التي يديرها \"Desktop Window Manager\". تعطيله قد يوفر مكاسب أداء بسيطة على الأجهزة الأقدم لكنه يعطّل تأثيرات Aero",
     "Setting_gaming-network-throttling_Name": "تقييد الشبكة",
     "Setting_gaming-network-throttling_Description": "يتحكم في تحديد معدل حزم الشبكة لتطبيقات الوسائط المتعددة. يُوصى بإبقاء التقييد مفعلاً (الافتراضي: 10 حزم/مللي ثانية) لأنه يوفر زمن استجابة DPC أفضل للألعاب مقارنة بتعطيله بالكامل",
-    "Setting_gaming-nagle-algorithm_Name": "تمكين خوارزمية Nagle",
-    "Setting_gaming-nagle-algorithm_Description": "تجميع حزم الشبكة الصغيرة قبل إرسالها لتحسين الكفاءة. تعطيلها يقلل زمن الاستجابة للألعاب عبر الإنترنت في الوقت الحقيقي لكنه قد يزيد قليلاً استخدام النطاق الترددي",
+    "Setting_gaming-nagle-algorithm_Name": "\u062e\u0648\u0627\u0631\u0632\u0645\u064a\u0629 Nagle",
+    "Setting_gaming-nagle-algorithm_Description": "\u064a\u062e\u0632\u0651\u0646 \u062d\u0632\u0645 \u0627\u0644\u0634\u0628\u0643\u0629 \u0627\u0644\u0635\u063a\u064a\u0631\u0629 \u0645\u0624\u0642\u062a\u064b\u0627 \u0642\u0628\u0644 \u0627\u0644\u0625\u0631\u0633\u0627\u0644 \u0644\u062a\u0642\u0644\u064a\u0644 \u0627\u0644\u062d\u0645\u0644 \u0627\u0644\u0632\u0627\u0626\u062f. \u0623\u0648\u0642\u0641\u0647 \u0644\u062a\u0642\u0644\u064a\u0644 \u0632\u0645\u0646 \u0627\u0644\u0627\u0633\u062a\u062c\u0627\u0628\u0629 \u0641\u064a \u0627\u0644\u0623\u0644\u0639\u0627\u0628 \u0639\u0628\u0631 \u0627\u0644\u0625\u0646\u062a\u0631\u0646\u062a\u060c \u0623\u0648 \u0627\u062a\u0631\u0643\u0647 \u0645\u0641\u0639\u0651\u0644\u064b\u0627 \u0644\u0643\u0641\u0627\u0621\u0629 \u0627\u0644\u0634\u0628\u0643\u0629 \u0627\u0644\u0639\u0627\u0645\u0629",
     "Setting_gaming-xbox-game-dvr_Name": "Xbox Game DVR",
     "Setting_gaming-xbox-game-dvr_Description": "تسجيل لقطات اللعب وأخذ لقطات شاشة باستخدام تراكب Xbox Game Bar. تعطيله يقلل استخدام CPU/GPU وقد يحسن معدلات الإطارات",
     "Setting_gaming-game-bar-controller_Name": "وصول يد التحكم إلى Game Bar",
