--- a/src/Winhance.UI/Features/Common/Localization/cs.json
+++ b/src/Winhance.UI/Features/Common/Localization/cs.json
@@ -612,8 +612,8 @@
   "Setting_gaming-performance-desktop-composition_Description": "Povolit vizuální efekty spravované Správcem oken plochy. Vypnutí může přinést menší zvýšení výkonu na starším hardwaru, ale poruší efekty Aero",
   "Setting_gaming-network-throttling_Name": "Omezování sítě",
   "Setting_gaming-network-throttling_Description": "Řídí omezování rychlosti síťových paketů pro multimediální aplikace. Doporučuje se ponechat omezování zapnuté (výchozí: 10 paketů/ms), protože poskytuje lepší latenci DPC pro hraní her než jeho úplné vypnutí",
-  "Setting_gaming-nagle-algorithm_Name": "Povolit Nagleův algoritmus",
-  "Setting_gaming-nagle-algorithm_Description": "Seskupovat malé síťové pakety před odesláním pro zlepšení efektivity. Vypnutí snižuje latenci pro online hraní v reálném čase, ale může mírně zvýšit využití šířky pásma",
+  "Setting_gaming-nagle-algorithm_Name": "Nagle\u016fv algoritmus",
+  "Setting_gaming-nagle-algorithm_Description": "Ukl\u00e1d\u00e1 mal\u00e9 s\u00ed\u0165ov\u00e9 pakety do vyrovn\u00e1vac\u00ed pam\u011bti p\u0159ed odesl\u00e1n\u00edm pro sn\u00ed\u017een\u00ed re\u017eie. Vypn\u011bte pro ni\u017e\u0161\u00ed latenci v online hr\u00e1ch, nebo ponechte zapnut\u00e9 pro obecnou efektivitu s\u00edt\u011b",
   "Setting_gaming-xbox-game-dvr_Name": "Xbox Game DVR",
   "Setting_gaming-xbox-game-dvr_Description": "Nahrávat herní klipy a pořizovat snímky obrazovky pomocí překrytí Xbox Game Bar. Vypnutí snižuje využití CPU/GPU a může zlepšit snímkovou frekvenci",
   "Setting_gaming-game-bar-controller_Name": "Přístup ovladače k Hernímu baru",
