--- a/src/Winhance.UI/Features/Common/Localization/de.json
+++ b/src/Winhance.UI/Features/Common/Localization/de.json
@@ -612,8 +612,8 @@
   "Setting_gaming-performance-desktop-composition_Description": "Aktivieren Sie visuelle Effekte, die vom Desktop Window Manager verwaltet werden. Das Deaktivieren kann geringfügige Leistungssteigerungen bei älterer Hardware bringen, bricht aber die Aero-Effekte",
   "Setting_gaming-network-throttling_Name": "Netzwerkdrosselung",
   "Setting_gaming-network-throttling_Description": "Steuert die Paketratenbegrenzung für Multimediaanwendungen. Es wird empfohlen, die Drosselung aktiviert zu lassen (Standard: 10 Pakete/ms), da sie eine bessere DPC-Latenz für Spiele bietet als eine vollständige Deaktivierung",
-  "Setting_gaming-nagle-algorithm_Name": "Nagle-Algorithmus aktivieren",
-  "Setting_gaming-nagle-algorithm_Description": "Kleine Netzwerkpakete vor dem Senden zusammenfassen, um die Effizienz zu verbessern. Das Deaktivieren reduziert die Latenz für Echtzeit-Online-Spiele, kann aber die Bandbreitennutzung leicht erhöhen",
+  "Setting_gaming-nagle-algorithm_Name": "Nagle-Algorithmus",
+  "Setting_gaming-nagle-algorithm_Description": "Puffert kleine Netzwerkpakete vor dem Senden, um den Overhead zu reduzieren. Ausschalten f\u00fcr geringere Latenz in Online-Spielen, oder eingeschaltet lassen f\u00fcr allgemeine Netzwerkeffizienz",
   "Setting_gaming-xbox-game-dvr_Name": "Xbox Game DVR",
   "Setting_gaming-xbox-game-dvr_Description": "Gameplay-Clips aufnehmen und Screenshots mit der Xbox Game Bar-Überlagerung machen. Das Deaktivieren reduziert die CPU-/GPU-Auslastung und kann die Bildraten verbessern",
   "Setting_gaming-game-bar-controller_Name": "Game Bar-Controller-Zugriff",
