--- a/src/Winhance.UI/Features/Common/Localization/it.json
+++ b/src/Winhance.UI/Features/Common/Localization/it.json
@@ -612,8 +612,8 @@
   "Setting_gaming-performance-desktop-composition_Description": "Abilita gli effetti visivi gestiti da Desktop Window Manager. La disabilitazione può fornire piccoli guadagni di prestazioni su hardware meno recente ma interromperà gli effetti Aero",
   "Setting_gaming-network-throttling_Name": "Limitazione di rete",
   "Setting_gaming-network-throttling_Description": "Controlla la limitazione della velocità dei pacchetti di rete per le applicazioni multimediali. Si consiglia di mantenere la limitazione attivata (predefinito: 10 pacchetti/ms) poiché offre una migliore latenza DPC per i giochi rispetto alla disattivazione completa",
-  "Setting_gaming-nagle-algorithm_Name": "Abilita l'algoritmo di Nagle",
-  "Setting_gaming-nagle-algorithm_Description": "Raggruppa piccoli pacchetti di rete prima dell'invio per migliorare l'efficienza. La disabilitazione riduce la latenza per i giochi online in tempo reale ma può aumentare leggermente l'utilizzo della larghezza di banda",
+  "Setting_gaming-nagle-algorithm_Name": "Algoritmo di Nagle",
+  "Setting_gaming-nagle-algorithm_Description": "Memorizza i piccoli pacchetti di rete prima dell\u0027invio per ridurre il sovraccarico. Disattivare per ridurre la latenza nei giochi online, o lasciare attivo per l\u0027efficienza di rete generale",
   "Setting_gaming-xbox-game-dvr_Name": "Xbox Game DVR",
   "Setting_gaming-xbox-game-dvr_Description": "Registra clip di gioco e acquisisci screenshot utilizzando la sovrapposizione della barra di gioco Xbox. La disabilitazione riduce l'utilizzo di CPU/GPU e può migliorare i frame rate",
   "Setting_gaming-game-bar-controller_Name": "Accesso al controller della barra di gioco",
