--- a/src/Winhance.UI/Features/Common/Localization/ja.json
+++ b/src/Winhance.UI/Features/Common/Localization/ja.json
@@ -612,8 +612,8 @@
   "Setting_gaming-performance-desktop-composition_Description": "デスクトップウィンドウマネージャーによって管理される視覚効果を有効にします。無効にすると、古いハードウェアでわずかなパフォーマンス向上が得られる場合がありますが、Aero効果が壊れます。",
   "Setting_gaming-network-throttling_Name": "ネットワークスロットリング",
   "Setting_gaming-network-throttling_Description": "マルチメディアアプリケーションのネットワークパケットレート制限を制御します。スロットリングを有効のまま（デフォルト：10パケット/ms）にすることを推奨します。完全に無効化するよりもゲーム向けのDPCレイテンシが向上します",
-  "Setting_gaming-nagle-algorithm_Name": "Nagleのアルゴリズムを有効にする",
-  "Setting_gaming-nagle-algorithm_Description": "効率を向上させるために、送信する前に小さなネットワークパケットをまとめてバッチ処理します。無効にすると、リアルタイムオンラインゲームの遅延が減少しますが、帯域幅の使用量がわずかに増加する可能性があります。",
+  "Setting_gaming-nagle-algorithm_Name": "Nagle \u30a2\u30eb\u30b4\u30ea\u30ba\u30e0",
+  "Setting_gaming-nagle-algorithm_Description": "\u9001\u4fe1\u524d\u306b\u5c0f\u3055\u306a\u30cd\u30c3\u30c8\u30ef\u30fc\u30af\u30d1\u30b1\u30c3\u30c8\u3092\u30d0\u30c3\u30d5\u30a1\u30ea\u30f3\u30b0\u3057\u3066\u30aa\u30fc\u30d0\u30fc\u30d8\u30c3\u30c9\u3092\u524a\u6e1b\u3057\u307e\u3059\u3002\u30aa\u30f3\u30e9\u30a4\u30f3\u30b2\u30fc\u30e0\u306e\u9045\u5ef6\u3092\u6e1b\u3089\u3059\u306b\u306f\u30aa\u30d5\u306b\u3001\u4e00\u822c\u7684\u306a\u30cd\u30c3\u30c8\u30ef\u30fc\u30af\u52b9\u7387\u3092\u7dad\u6301\u3059\u308b\u306b\u306f\u30aa\u30f3\u306e\u307e\u307e\u306b\u3057\u3066\u304f\u3060\u3055\u3044",
   "Setting_gaming-xbox-game-dvr_Name": "Xbox Game DVR",
   "Setting_gaming-xbox-game-dvr_Description": "Xbox Game Barオーバーレイを使用して、ゲームプレイクリップを録画し、スクリーンショットを撮ります。無効にすると、CPU/GPUの使用量が減少し、フレームレートが向上する可能性があります。",
   "Setting_gaming-game-bar-controller_Name": "ゲームバーコントローラーアクセス",
