--- a/src/Winhance.UI/Features/Common/Localization/nl.json
+++ b/src/Winhance.UI/Features/Common/Localization/nl.json
@@ -612,8 +612,8 @@
   "Setting_gaming-performance-desktop-composition_Description": "Schakel visuele effecten in die worden beheerd door Desktop Window Manager. Uitschakelen kan kleine prestatiewinsten opleveren op oudere hardware maar zal Aero-effecten verbreken",
   "Setting_gaming-network-throttling_Name": "Netwerkbeperking",
   "Setting_gaming-network-throttling_Description": "Beheert de snelheidsbeperking van netwerkpakketten voor multimediatoepassingen. Het wordt aanbevolen om de beperking ingeschakeld te houden (standaard: 10 pakketten/ms) omdat dit betere DPC-latentie biedt voor games dan volledige uitschakeling",
-  "Setting_gaming-nagle-algorithm_Name": "Nagle\u0027s Algoritme inschakelen",
-  "Setting_gaming-nagle-algorithm_Description": "Batch kleine netwerkpakketten samen voor verzending om efficiëntie te verbeteren. Uitschakelen vermindert latentie voor realtime online gamen maar kan bandbreedtegebruik iets verhogen",
+  "Setting_gaming-nagle-algorithm_Name": "Nagle-algoritme",
+  "Setting_gaming-nagle-algorithm_Description": "Buffert kleine netwerkpakketten voor verzending om overhead te verminderen. Schakel uit voor lagere latentie in online games, of laat ingeschakeld voor algemene netwerkeffici\u00ebntie",
   "Setting_gaming-xbox-game-dvr_Name": "Xbox GameDVR",
   "Setting_gaming-xbox-game-dvr_Description": "Neem gameplayclips op en maak screenshots met de Xbox Game Bar overlay. Uitschakelen vermindert CPU/GPU-gebruik en kan beeldsnelheden verbeteren",
   "Setting_gaming-game-bar-controller_Name": "Game Bar Controller Toegang",
