--- a/src/Winhance.UI/Features/Common/Localization/vi.json
+++ b/src/Winhance.UI/Features/Common/Localization/vi.json
@@ -612,8 +612,8 @@
   "Setting_gaming-performance-desktop-composition_Description": "Bật các hiệu ứng hình ảnh do Trình quản lý cửa sổ màn hình quản lý. Việc tắt có thể mang lại lợi ích nhỏ về hiệu suất trên phần cứng cũ hơn nhưng sẽ phá vỡ các hiệu ứng Aero",
   "Setting_gaming-network-throttling_Name": "Giới hạn mạng",
   "Setting_gaming-network-throttling_Description": "Kiểm soát giới hạn tốc độ gói mạng cho các ứng dụng đa phương tiện. Nên giữ giới hạn được bật (mặc định: 10 gói/ms) vì nó cung cấp độ trễ DPC tốt hơn cho trò chơi so với việc tắt hoàn toàn",
-  "Setting_gaming-nagle-algorithm_Name": "Bật thuật toán Nagle",
-  "Setting_gaming-nagle-algorithm_Description": "Gộp các gói mạng nhỏ lại với nhau trước khi gửi để cải thiện hiệu quả. Việc tắt giúp giảm độ trễ khi chơi game trực tuyến thời gian thực nhưng có thể làm tăng nhẹ việc sử dụng băng thông",
+  "Setting_gaming-nagle-algorithm_Name": "Thu\u1eadt to\u00e1n Nagle",
+  "Setting_gaming-nagle-algorithm_Description": "\u0110\u1ec7m c\u00e1c g\u00f3i m\u1ea1ng nh\u1ecf tr\u01b0\u1edbc khi g\u1eedi \u0111\u1ec3 gi\u1ea3m chi ph\u00ed. T\u1eaft \u0111\u1ec3 gi\u1ea3m \u0111\u1ed9 tr\u1ec5 trong game tr\u1ef1c tuy\u1ebfn, ho\u1eb7c b\u1eadt \u0111\u1ec3 duy tr\u00ec hi\u1ec7u qu\u1ea3 m\u1ea1ng chung",
   "Setting_gaming-xbox-game-dvr_Name": "Xbox Game DVR",
   "Setting_gaming-xbox-game-dvr_Description": "Ghi lại các đoạn clip trò chơi và chụp ảnh màn hình bằng lớp phủ Xbox Game Bar. Việc tắt giúp giảm mức sử dụng CPU/GPU và có thể cải thiện tốc độ khung hình",
   "Setting_gaming-game-bar-controller_Name": "Truy cập bộ điều khiển Game Bar",
